clusters/ue1/test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service-ue1-test
  namespace: app1-ue1-test
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: app1-ue1-test
