clusters/ue1/test/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app1-rollout-ue1-test
  namespace: app1-ue1-test
  labels:
    app: app1-service-ue1-test
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: app1-ue1-test
  template:
    metadata:
      labels:
        app: app1-ue1-test
    spec:
      containers:
      - name: app1
        image: 993866564897.dkr.ecr.us-east-1.amazonaws.com/haleon-demo-version1:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
            requests:
                memory: "64Mi"
                cpu: "250m"
            limits:
                memory: "128Mi"
                cpu: "500m"
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: app1-service-ue1-test
      previewService: app1-service-ue1-test-preview
---

apiVersion: v1
kind: Service
metadata:
  name: app1-service-ue1-test-preview
  namespace: app1-ue1-test
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: app1-ue1-test

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress-ue1-test-preview
  namespace: app1-ue1-test
  annotations:
    alb.ingress.kubernetes.io/group.name: ue1-test-preview
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service-ue1-test-preview
            port:
              number: 80
